Include stat_.h before estack.h, which defines esp macro. Prevent a spurious macro substitution in Cygwin version of signal.h. Bug 691123, customers 661.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10777 a1074d23-0009-0410-80fe-cf8c14f379e6